# netbox_plugin_voip

./: MANIFEST.in  Makefile  README.md  README.me  pyproject.toml  setup.py  tasks.py
develop/: configuration.py  docker-compose.yml
development/: configuration.py  docker-compose.yml
nb/circuits/: filtersets.py
nb/circuits/migrations/: 0025_standardize_models.py  0028_cache_circuit_terminations.py  0029_circuit_tracing.py
nb/circuits/tests/: test_filtersets.py
nb/dcim/migrations/: 0123_standardize_models.py  0124_mark_connected.py  0128_device_location_populate.py
nb/dcim/tables/: devices.py
nb/dcim/tests/: test_filtersets.py  test_views.py
nb/extras/: admin.py  filtersets.py  scripts.py
nb/extras/api/: nested_serializers.py
nb/extras/models/: configcontexts.py
nb/ipam/: querysets.py  urls.py
nb/ipam/api/: views.py
nb/ipam/models/: ip.py  services.py
nb/ipam/tests/: test_filtersets.py
nb/netbox/: models.py  urls.py
nb/netbox/api/: __init__.py  views.py
nb/netbox/views/: generic.py
nb/project-static/css/: base.css
nb/secrets/: urls.py
nb/secrets/tests/: test_filtersets.py
nb/templates/: home.html
nb/templates/circuits/: circuit.html
nb/templates/dcim/: manufacturer.html  powerport.html
nb/templates/extras/: journalentry.html  (+1 more)
nb/tenancy/: forms.py
nb/users/: filtersets.py
nb/utilities/: views.py
netbox_plugin_voip/: __init__.py  admin.py  models.py  navigation.py  urls.py  views.py
netbox_plugin_voip/extras/: context_managers.py
netbox_plugin_voip/xxx_extras/: constants.py  forms.py  webhooks_worker.py
(+286 files in other folders)
