[tool.poetry]
name = "netbox_plugin_voip"
version = "0.1.0"
description = "NetBox Voice Plugin"
authors = ["leethobbitlabs <dking8921@gmail.com>"]
license = "Apache-2.0"
packages = [
    { include = "netbox_plugin_voip" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.6b0"
invoke = "^1.5.0"
pylint = "^2.8.3"
pylint-django = "^2.4.4"
pydocstyle = "^6.1.1"
yamllint = "^1.26.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
